--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.2.0",
-    "react-icons": "^4.3.1",
-    "stripe": "^8.209.0"
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.2",
+    "react-scroll": "^1.8.7",
+    "stripe": "^8.209.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
